RESOLVED FIXED145097
REGRESSION (Subpixel): Dashed underline is missing when box is positioned at subpixels.
https://bugs.webkit.org/show_bug.cgi?id=145097
Summary REGRESSION (Subpixel): Dashed underline is missing when box is positioned at ...
alan
Reported 2015-05-16 14:36:21 PDT
Attachments
Patch (8.56 KB, patch)
2015-05-16 14:47 PDT, alan
no flags
alan
Comment 1 2015-05-16 14:47:44 PDT
alan
Comment 2 2015-05-16 15:36:34 PDT
Thanks Simon!
WebKit Commit Bot
Comment 3 2015-05-16 16:25:31 PDT
Comment on attachment 253275 [details] Patch Clearing flags on attachment: 253275 Committed r184440: <http://trac.webkit.org/changeset/184440>
WebKit Commit Bot
Comment 4 2015-05-16 16:25:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.