REGRESSION (Subpixel): Dashed underline is missing when box is positioned at subpixels. https://bugs.webkit.org/show_bug.cgi?id=145097 rdar://problem/18588415

Reviewed by Simon Fraser.

Dashed and dotted border painting needs clipping in order to properly display corners.
Similarly to solid border's quad calculation, we pixelsnap the border positions before computing the clipping quad values.

Source/WebCore:

Test: fast/borders/dashed-border-on-subpixel-position.html
      fast/borders/dotted-border-on-subpixel-position.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::clipBorderSidePolygon):

LayoutTests:

* fast/borders/dashed-border-on-subpixel-position-expected.html: Added.
* fast/borders/dashed-border-on-subpixel-position.html: Added.
* fast/borders/dotted-border-on-subpixel-position-expected.html: Added.
* fast/borders/dotted-border-on-subpixel-position.html: Added.


Canonical link: https://commits.webkit.org/163128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184440 268f45cc-cd09-0410-ab3c-d52691b4dbfc